eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: discovery
  template:
    metadata:
      labels:
        tier: discovery
    spec:
      containers:
      - name: eureka
        image: 777953799388.dkr.ecr.ap-northeast-1.amazonaws.com/eks-repo:latest
        ports:
          - name: http
            containerPort: 1111
