backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels: 
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 2222
    targetPort: http
  selector:
    tier: backend
