eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  labels: 
    tier: discovery
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 1111
    targetPort: http
  selector:
    tier: discovery
