eurekav2.yaml

apiVersion: v1
kind: Service
metadata:
  name: eurekav2
  labels: 
    tier: discovery
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 1111
    targetPort: http
  selector:
    tier: discovery
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: discovery
  template:
    metadata:
      labels:
        tier: discovery
    spec:
      containers:
      - name: eureka
        image: 777953799388.dkr.ecr.ap-northeast-1.amazonaws.com/eurekav2-repo:latest
        ports:
          - name: http
            containerPort: 1111
      - name: envoy
        image: 840364872350.dkr.ecr.ap-northeast-1.amazonaws.com/aws-appmesh-envoy:v1.12.2.1-prod
        securityContext:
          runAsUser: 1337
