final211b.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels: 
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 2222
    targetPort: http
  selector:
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: backend
        image: 777953799388.dkr.ecr.ap-northeast-1.amazonaws.com/producer-repo:latest
        ports:
          - name: http
            containerPort: 2222
        image: 111345817488.dkr.ecr.ap-northeast-1.amazonaws.com/aws-appmesh-envoy:v1.8.0.2-beta
        securityContext:
          runAsUser: 1337
