final257.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels: 
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
  selector:
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: 777953799388.dkr.ecr.ap-northeast-1.amazonaws.com/consumer-repo:latest
        ports:
          - name: http
            containerPort: 8080
        image: 840364872350.dkr.ecr.ap-northeast-1.amazonaws.com/aws-appmesh-envoy:v1.12.2.1-prod
        securityContext:
          runAsUser: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels: 
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 2222
    targetPort: http
  selector:
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: backend
        image: 777953799388.dkr.ecr.ap-northeast-1.amazonaws.com/producer-repo:latest
        ports:
          - name: http
            containerPort: 2222
        image: 840364872350.dkr.ecr.ap-northeast-1.amazonaws.com/aws-appmesh-envoy:v1.12.2.1-prod
        securityContext:
          runAsUser: 1337
---

apiVersion: v1
kind: Service
metadata:
  name: eureka
  labels: 
    tier: discovery
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 1111
    targetPort: http
  selector:
    tier: discovery
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: discovery
  template:
    metadata:
      labels:
        tier: discovery
    spec:
      containers:
      - name: eureka
        image: 777953799388.dkr.ecr.ap-northeast-1.amazonaws.com/eks-repo:latest
        ports:
          - name: http
            containerPort: 1111
        image: 840364872350.dkr.ecr.ap-northeast-1.amazonaws.com/aws-appmesh-envoy:v1.12.2.1-prod
        securityContext:
          runAsUser: 1337
