frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels: 
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
  selector:
    tier: frontend
