frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels: 
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
  selector:
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: 777953799388.dkr.ecr.ap-northeast-1.amazonaws.com/consumer-repo:latest
        ports:
          - name: http
            containerPort: 8080
      - name: envoy
        image: 840364872350.dkr.ecr.ap-northeast-1.amazonaws.com/aws-appmesh-envoy:v1.12.2.1-prod
        securityContext:
          runAsUser: 1337
