one-in-all.yaml
#backend
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels: 
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 2222
    targetPort: http
  selector:
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: backend
        image: 777953799388.dkr.ecr.ap-northeast-1.amazonaws.com/producer-repo:latest
        ports:
          - name: http
            containerPort: 2222
        ports:
        - name: customer
          containerPort: 2222
      - name: envoy
        image: 111345817488.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy:v1.9.1.0-prod
        securityContext:
          runAsUser: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  labels: 
    tier: discovery
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 1111
    targetPort: http
  selector:
    tier: discovery
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: discovery
  template:
    metadata:
      labels:
        tier: discovery
    spec:
      containers:
      - name: eureka
        image: 777953799388.dkr.ecr.ap-northeast-1.amazonaws.com/eks-repo:latest
        ports:
          - name: http
            containerPort: 1111
        ports:
        - name: customer
          containerPort: 1111
      - name: envoy
        image: 111345817488.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy:v1.9.1.0-prod
        securityContext:
          runAsUser: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels: 
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
  selector:
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: 777953799388.dkr.ecr.ap-northeast-1.amazonaws.com/consumer-repo:latest
        ports:
          - name: http
            containerPort: 8080
        - name: "serviceName"
          value: "frontend-service"                  
        - name: "versionNum"
          value: "1.0"                  
        ports:
        - name: customer
          containerPort: 1111
      - name: envoy
        image: 111345817488.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy:v1.9.1.0-prod
        securityContext:
          runAsUser: 1337
